# bspwm-auto-rice

./: README.md  pyproject.toml
bspwm_auto_rice/: autoricer.py  bspar.py  dependencies.py
